# device_faker

./: .gitignore  Cargo.toml  build_android.py  pack_module.py
.github/workflows/: build.yml
device_faker/: Cargo.toml  build_android.py
device_faker/src/: config.rs
device_faker_cli/: Cargo.toml  build.py
device_faker_cli/src/: converter.rs  main.rs  template.rs
docs/: CHANGELOG.md  CONFIG.md  README.md
docs/en/: CHANGELOG.md  CONFIG.md  README.md
docs/tr/: README.md
module/: config.toml  customize.sh  module.prop
module/webroot/: index.html
module/webroot/assets/: css-BM6Ekrdm.js  index-B-IeHGcr.css  index-B9fg4FZB.css  index-BBR97FkU.js  index-BOBu9qjM.css  index-BYUIO-6r.css  index-BwF9Y8_q.js  index-CQM8G8s8.css  index-Cmy6RQBO.js  index-DEXa_fMM.js  index-DEv1HZlu.js  index-DeAeunPH.css  index-DpPkg0R7.css  index-DrNs3yDq.js  index-MX8G0_Vx.js  index-yB0E0YlK.js
src/: atexit.rs  companion.rs  config.rs  cpu_spoof.rs  file_logger.rs  hooks.rs  lib.rs  props.rs  state.rs  watcher.rs
webui/: build.py  components.d.ts  index.html  package-lock.json  package.json
webui/src/: App.vue  main.ts  polyfills.ts  style.css  vite-env.d.ts
webui/src/components/: OnlineTemplateDialog.vue
webui/src/components/apps/: AppConfigDialog.vue  AppFilters.vue  AppList.vue
webui/src/components/shared/: DeviceFakerFormFields.vue
webui/src/components/templates/: TemplateCard.vue  TemplateDialog.vue  TemplateHeader.vue  TemplateList.vue  TemplateTransferDialog.vue
webui/src/composables/: useAppIcons.ts  useDeviceFakerForm.ts
webui/src/pages/: AppsPage.vue  SettingsPage.vue  StatusPage.vue  TemplatePage.vue
webui/src/stores/: apps.ts  config.ts
webui/src/types/: index.ts
webui/src/utils/: config.ts  i18n.ts  ksu.ts  mockData.ts  onlineTemplates.ts  package.ts  templateTransfer.ts
xtask/: Cargo.toml
xtask/src/: main.rs
