[workspace]
members = ["device_faker", "device_faker_cli"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

# 全局 release profile 配置
[profile.release]
panic = "abort"
lto = "fat"

# device_faker - 性能取向配置
[profile.release.package.device_faker]
strip = true
opt-level = 3
codegen-units = 1
overflow-checks = false
debug-assertions = false
incremental = false

# device_faker_cli - 大小优化配置
[profile.release.package.device_faker_cli]
strip = true
opt-level = "s"
codegen-units = 1
overflow-checks = false
debug-assertions = false
incremental = false
