[package]
name = "device_faker_cli"
version = "1.3.5"
edition = "2024"
authors = ["Seyud"]

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
argh = "0.1.19"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.0", features = ["display", "parse"] }
walkdir = "2.5.0"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 2
strip = true
codegen-units = 1
overflow-checks = false
